# WordParser

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  db.sqlite3  docker-compose.yml  main.py  manage.py  old_version.py  pyproject.toml  requirements.dev.txt  requirements.lock.txt  requirements.txt  settings.py
Parser/: dump_to_mongodb.py  json_file  listening_function.py  parser.py
apps/: api.py  db.py  errors.py  models.py  utils.py
apps/celery/: celery_app.py  worker.py
apps/wordparser/: parser_api.py
ci/: entrypoint.sh
ci/dockerfiles/: Dockerfile
flask_app/: __init__.py  models.py  views.py
flask_app/templates/: base.html  flashcards.html  home.html
flask_files/: app.py  requirements.txt
flask_files/templates/: about.html  base.html  upload_document.html
learning_portal/: apps.py  forms.py  serializers.py  urls.py  views.py
learning_portal/templates/: flashcard_challenge.html  start_page.html
parser_app/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
parser_app/migrations/: 0001_initial.py  0002_alter_flashcard_category_alter_flashcard_title.py  0003_flashcardcategory_alter_flashcard_category.py  0004_alter_flashcardcategory_id.py  0006_alter_flashcard_content.py  (+6 more)
parser_project/: asgi.py  settings.py  urls.py  wsgi.py
src/: app.ts  authDB.ts  cookie.ts  email.ts  file.ts  flashcards.ts  nodeServer.js  package-lock.json  package.json  router.ts  server.ts  session.ts  token.ts  tsconfig.json  user.ts
templates/: base.html
tests/: hello_world_page.py  home_page.py  test_views.py
(+41 files in other folders)
