[project]
name = "WordParser"
version = "0.0.1"
authors = [
    {name = "Wojciech Ziarnik", email = "woj.ziarnik@gmail.com"},
    {name = "Dawid Adamczyk"}
]
description = "Web application to learn using flashcards"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/daada95/WordParser"
Documentation = "https://github.com/daada95/WordParser/blob/main/README.md"
Repository = "https://github.com/daada95/WordParser.git"
Issues = "https://github.com/daada95/WordParser/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
asyncio_mode = "auto"
